added thymeleaf project

--- a/src/main/resources/templates/auth/home.html
+++ b/src/main/resources/templates/auth/home.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Fine Event Luxury - Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
+<div class="container-fluid">
+    <div th:replace="fragments/navbar"></div>
+    <div class="container py-4">
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">Welcome to Fine Luxury Event!</h1>
+                <p class="col-md-8 fs-4" th:if="${isloggedIn}"><span th:text="${message}"></span></p>
+            </div>
+            <div sec:authorize="!isAuthenticated()">
+                <p class="col-md-8 fs-4">Hello you are welcome, <span th:text="${#authentication.name}"></span>!</p>
+            </div>
+        </div>
 
+        <div th:replace="fragments/alert-box"></div>
+    </div>
+
+    <div sec:authorize="!isAuthenticated()">
+        <a class="btn btn-primary" href="/login" role="button">Login</a>
+        <a class="btn btn-success" href="/signup" role="button">Signup</a>
+        <a class="nav-link" href="/event">Event</a>
+    </div>
+
+</div>
+
+<div th:replace="fragments/script-fragment"></div>
 </body>
 </html>
