--- a/src/main/resources/templates/auth/event/update-event.html
+++ b/src/main/resources/templates/auth/event/update-event.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Update event</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
-
+<div class="container-fluid">
+    <div th:replace="fragments/navbar"></div>
+    <div class="container py-4">
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">Update event</h1>
+                <form action="#" method="post" th:action="@{/event/update}" th:object="${event}">
+                    <div class="form-group mb-3">
+                        <label for="name">Event name</label>
+                        <input class="form-control" id="name" th:field="*{name}" type="text" required>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="fromDate">fromDate</label>
+                        <input class="form-control" id="fromDate" th:field="*{fromDate}" type="text" required>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="fromDate">toDate</label>
+                        <input class="form-control" id="toDate" th:field="*{toDate}" type="text" required>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="description">Description</label>
+                        <input class="form-control" id="description" th:field="*{description}" type="text" required>
+                    </div>
+                    <input id="id" th:field="*{id}" type="hidden">
+                    <input id="active" th:field="*{active}" type="hidden">
+                    <a class="btn btn-light mb-3" type="button" href="/event">Cancel</a>
+                    <button class="btn btn-outline-primary mb-3" type="submit">Update</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<div th:replace="fragments/script-fragment"></div>
 </body>
 </html>
