--- a/src/main/resources/templates/auth/event/view-event.html
+++ b/src/main/resources/templates/auth/event/view-event.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>View Event</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
-
+<div class="container-fluid">
+    <div th:replace="fragments/navbar"></div>
+    <div class="container py-4">
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">Event info</h1>
+                <div class="mb-3 row">
+                    <label for="name" class="col-sm-2 col-form-label fw-bold">Event name</label>
+                    <div class="col-sm-10">
+                        <input type="text" readonly class="form-control-plaintext" id="name" th:value="${event.name}">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="fromDate" class="col-sm-2 col-form-label fw-bold">fromDate</label>
+                    <div class="col-sm-10">
+                        <input type="text" readonly class="form-control-plaintext" id="fromDate" th:value="${event.fromDate}">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="toDate" class="col-sm-2 col-form-label fw-bold">toDate</label>
+                    <div class="col-sm-10">
+                        <input type="text" readonly class="form-control-plaintext" id="toDate" th:value="${event.toDate}">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="description" class="col-sm-2 col-form-label fw-bold">Description</label>
+                    <div class="col-sm-10">
+                        <input type="text" readonly class="form-control-plaintext" id="description" th:value="${event.description}">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="active" class="col-sm-2 col-form-label fw-bold">Active</label>
+                    <div class="col-sm-10">
+                        <input type="text" readonly class="form-control-plaintext" id="active" th:value="${event.active} ? 'Yes' : 'No'">
+                    </div>
+                </div>
+                <a class="btn btn-outline-info mb-3" type="button" href="/event">Back</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div th:replace="fragments/script-fragment"></div>
 </body>
 </html>
