--- a/src/main/resources/templates/auth/fragments/navbar.html
+++ b/src/main/resources/templates/auth/fragments/navbar.html
@@ -1,4 +1,4 @@
-<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
+<<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" sec:Authorize="hasAnyRole('TEACHER', 'ADMIN')">Teacher</a>
+                    <a class="nav-link" href="#" sec:Authorize="hasAnyRole('ORGANIZER', 'ADMIN')">Organizer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
