collection added to eventController and DataInit

--- a/src/main/resources/templates/auth/event/list-event.html
+++ b/src/main/resources/templates/auth/event/list-event.html
@@ -28,6 +28,7 @@
                     <th scope="col">fromDate</th>
                     <th scope="col">toDate</th>
                     <th scope="col">Description</th>
+                    <th scope="col">isActive</th>
                     </thead>
                     <tbody>
                     <tr th:each="event: ${events}">
