--- a/src/main/resources/templates/auth/fragments/navbar.html
+++ b/src/main/resources/templates/auth/fragments/navbar.html
@@ -1,4 +1,4 @@
-<<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
