--- a/src/main/resources/templates/auth/signup.html
+++ b/src/main/resources/templates/auth/signup.html
@@ -38,7 +38,7 @@
                             <option th:each="authority: ${authorities}" th:text="${authority.name.replace('_', ' ')}" th:value="${authority.id}"></option>
                         </select>
                     </div>
-                    <a class="btn btn-light mb-3" type="button" href="/">Cancel</a>
+                    <a class="btn btn-light mb-3" type="button" href="/static">Cancel</a>
                     <button class="btn btn-outline-primary mb-3" type="submit">Signup</button>
                 </form>
             </div>
