--- a/src/main/resources/templates/event/create-event.html
+++ b/src/main/resources/templates/event/create-event.html
@@ -22,11 +22,11 @@
                     </div>
                     <div class="form-group mb-3">
                         <label for="fromDate">fromDate</label>
-                        <input class="form-control" id="fromDate" th:field="*{fromDate}" type="text" required>
+                        <input class="form-control" id="fromDate" th:text="${#temporals.format(localDateTime, 'dd-MM-yyyy HH:mm')}" required>
                     </div>
                     <div class="form-group mb-3">
                         <label for="toDate">toDate</label>
-                        <input class="form-control" id="toDate" th:field="*{toDate}" type="text" required>
+                        <input class="form-control" id="toDate" th:text="${#temporals.format(localDateTime, 'dd-MM-yyyy HH:mm')}" required>
                     </div>
                     <div class="form-group mb-3">
                         <label for="description">Description</label>
