--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,14 +2,14 @@
 
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">FINE LUXURY EVENT MANAGEMENT </a>
+        <a class="navbar-brand" href="/static">FINE LUXURY EVENT MANAGEMENT </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse text-danger" id="navbarNav" sec:authorize="isAuthenticated()">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/static">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/event">Event</a>
