--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -17,6 +17,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/view-event">View Event</a>
                 </li>
+                <div sec:authorize="!isAuthenticated()">
+                    <a class="btn btn-primary" href="/login" role="button">Login</a>
+                </div>
 
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
@@ -25,6 +28,9 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <div>
+                    <a class="btn btn-success" href="/signup" role="button">Signup</a>
+                </div>
             </ul>
         </div>
     </div>
