--- a/src/main/resources/templates/event/view-event.html
+++ b/src/main/resources/templates/event/view-event.html
@@ -13,36 +13,38 @@
         <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold">Event info</h1>
+                <form action="#" th:object="${event}">
                 <div class="mb-3 row">
                     <label for="name" class="col-sm-2 col-form-label fw-bold">Event name</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="name" th:value="${event.name}">
+                        <input type="text" readonly class="form-control-plaintext" id="name" th:field="*{name}">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="fromDate" class="col-sm-2 col-form-label fw-bold">fromDate</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="fromDate" th:value="${event.fromDate}">
+                        <input type="text" readonly class="form-control-plaintext" id="fromDate" th:field="*{fromDate}">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="toDate" class="col-sm-2 col-form-label fw-bold">toDate</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="toDate" th:value="${event.toDate}">
+                        <input type="text" readonly class="form-control-plaintext" id="toDate" th:value="${toDate}">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="description" class="col-sm-2 col-form-label fw-bold">Description</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="description" th:value="${event.description}">
+                        <input type="text" readonly class="form-control-plaintext" id="description" th:value="${description}">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="active" class="col-sm-2 col-form-label fw-bold">Active</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="active" th:value="${event.active} ? 'Yes' : 'No'">
+                        <input type="text" readonly class="form-control-plaintext" id="active" th:value="${active} ? 'Yes' : 'No'">
                     </div>
                 </div>
+                </form>
                 <a class="btn btn-outline-info mb-3" type="button" href="/event">Back</a>
             </div>
         </div>
