--- a/src/main/resources/templates/event/view-event.html
+++ b/src/main/resources/templates/event/view-event.html
@@ -29,13 +29,13 @@
                 <div class="mb-3 row">
                     <label for="toDate" class="col-sm-2 col-form-label fw-bold">toDate</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="toDate" th:value="${toDate}">
+                        <input type="text" readonly class="form-control-plaintext" id="toDate" th:field="*{toDate}">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="description" class="col-sm-2 col-form-label fw-bold">Description</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="description" th:value="${description}">
+                        <input type="text" readonly class="form-control-plaintext" id="description" th:field="*{description}">
                     </div>
                 </div>
                 <div class="mb-3 row">
