fine event luxury page and home page corrected

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/static">FINE LUXURY EVENT MANAGEMENT </a>
+        <a class="navbar-brand" href="/">FINE LUXURY EVENT MANAGEMENT </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,9 +13,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/event">Event</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/view-event">View Event</a>
                 </li>
                 <div sec:authorize="!isAuthenticated()">
                     <a class="btn btn-primary" href="/login" role="button">Login</a>
